added HomeLink and CSS Details

--- a/ClientSideReact/src/styles/CharacterDetailStyle.css
+++ b/ClientSideReact/src/styles/CharacterDetailStyle.css
@@ -1,4 +1,4 @@
-.page {
+.body {
     background-image: url('https://images.alphacoders.com/133/thumb-1920-1330376.png');
     background-size: cover;      /* This ensures the background covers the page */
     background-repeat: no-repeat; /* Prevents the image from repeating */
